# rental_management

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e07c7d866ed_add_notifications.py  0e4536ea7e9a_add_lease_renewed_from.py  11681eeccf15_add_invitations_table.py  405a20d32df6_add_maintenance_requests.py  40ced599e004_users_organizations_memberships.py  4abe524e31f2_add_inspections.py  4f6bf92b0607_add_payments.py  551fe4865e44_add_calendar_events.py  591d2d4c3249_add_documents.py  59285cbffe1c_add_charge_reminders.py  (+11 more)
backend/app/: main.py
backend/app/core/: db.py  (+6 more)
backend/tests/: conftest.py  test_auth_change_password.py  test_auth_login.py  test_auth_me.py  test_auth_password_reset.py  test_auth_signup.py  test_calendar.py  test_charge_history.py  test_charge_model.py  test_charge_reminder_model.py  test_charges.py  test_charges_cli.py  test_contractors.py  test_dashboard_charts.py  test_db.py  test_documents.py  test_email.py  test_email_disabled.py  test_expenses.py  test_expiry_notifications.py  test_inspections.py  test_invitation_accept.py  test_invitation_model.py  test_invitations.py  test_lease_model.py  test_lease_reminder_model.py  test_lease_renewal.py  test_lease_status.py  test_leases.py  test_maintenance_manager.py  test_maintenance_model.py  test_maintenance_notify.py  test_maintenance_tenant.py  test_models.py  test_notification_model.py  test_notifications_api.py  test_notify_service.py  test_payment_allocation.py  test_payment_model.py  test_payments_api.py  (+24 more)
(+217 files in other folders)
